--- a/BiodataTest.csproj
+++ b/BiodataTest.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>67aafcc0-b253-4a04-b688-4dc64c9d5c83</UserSecretsId>
+AspNetCoreHostingModel>OutProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
