--- a/BiodataTest.csproj
+++ b/BiodataTest.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>67aafcc0-b253-4a04-b688-4dc64c9d5c83</UserSecretsId>
-AspNetCoreHostingModel>OutProcess</AspNetCoreHostingModel>
+<AspNetCoreHostingModel>OutProcess</AspNetCoreHostingModel>
+<AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
   </PropertyGroup>
 
   <ItemGroup>
