--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "Cnn": "Server=Localhost;user id=sa; Password=Agbon01;Database=GodwinAzureTestDB5"
+    "Cnn": "Server=CYBERPAYROLL;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
     //"Cnn": "Server=tcp:remotehostdb.database.windows.net,1433;Initial Catalog=GodwinAzureTestDB;Persist Security Info=False;User ID=Admin2021;Password=Agbon2021;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
   },
   "EmailSettings": {
@@ -24,7 +24,10 @@
   },
   
   "AllowedHosts": "*",
-
+  "PaymentDetails": {
+    "CyberPayReturnUrl": "http://9320-212-100-86-17.ngrok.io/ShoppingCartItem/CompleteCyberPay/",
+    "CyberPayUrl": "https://payment-api.staging.cyberpay.ng/"
+  },
   "Google": {
     "clientid": "891230259159-3b6g6u95pa1p7vkrkjc2tcj63sd0km29.apps.googleusercontent.com",
     "clientsecret": "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"
