--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
 
   "ConnectionStrings": {
-    "Cnn": "Server=10.12.201.66;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
-    //"Cnn": "Server=CYBERPAYROLL;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
+    //"Cnn": "Server=10.12.201.66;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
+    "Cnn": "Server=CYBERPAYROLL;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
     //"Cnn": "Server=Localhost;user id=sa; Password=Agbon01;Database=GodwinAzureTestDB5"
     //"Cnn": "Server=CYBERPAYROLL;user id=sa; Password=Test_test1;Database=GodwinAzureTestDB5"
     //"Cnn": "Server=tcp:remotehostdb.database.windows.net,1433;Initial Catalog=GodwinAzureTestDB;Persist Security Info=False;User ID=Admin2021;Password=Agbon2021;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
