--- a/BiodataTest.csproj
+++ b/BiodataTest.csproj
@@ -23,6 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Account\EditUsers.cshtml" />
+    <Content Remove="Views\Account\_EditUsers1.cshtml" />
     <Content Remove="Views\Login.cshtml" />
     <Content Remove="Views\RegisterUser.cshtml" />
   </ItemGroup>
